--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,7 +222,7 @@
 
 .page-header {
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/cart-page-header-img.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://t3.ftcdn.net/jpg/04/60/44/42/360_F_460444211_E7j3njYE705Rk1guKz9LKh58gFgiTybV.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -557,4 +557,8 @@
     
 }
 
+
+.col-md-6 {
+
+}
 
